CAMEL-17339 - Avoid List<String> as configuration parameter types in Endpoint configurations - Camel Consul Tags Migration notes
Signed-off-by: Andrea Cosentino <ancosen@gmail.com>

--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_14.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_14.adoc
@@ -21,7 +21,7 @@ The scopes parameter for camel-google-calendar, camel-google-calendar-streams, c
 
 === camel-consul
 
-The nodeMeta parameter for camel-consul has been defined as String instead of List<String>. For the migration users will need to, eventually, define nodeMeta as a comma separated list of nodeMeta instead of a List instance. For more information the related issue is CAMEL-17339.
+The nodeMeta and the tags parameter for camel-consul has been defined as String instead of List<String>. For the migration users will need to, eventually, define nodeMeta as a comma separated list of nodeMeta instead of a List or Set instance. For more information the related issue is CAMEL-17339.
 
 === camel-dapr
 
