--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_14.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_14.adoc
@@ -19,6 +19,13 @@ Previously, each sub-message was independent (despite the documentation refers t
 has been mistakenly for many years, as this feature is rarely in use. However, we had the opportunity to look into this as part
 of an issue, and felt it's better to fix this before for this LTS release.
 
+=== camel-main / camel-platform-http-main
+
+The HTTP server for standalone `camel-main` applications has separated management services and business services.
+This means that configurations should be changed from `camel.server.xxx` to `camel.management.xxx` as shown:
+
+TODO: list of options
+
 === camel-jbang
 
 The `camel-jbang` has upgraded to Java 21 as the default java-version when running and exporting.
