--- a/components/camel-platform-http-main/src/main/docs/platform-http-main.adoc
+++ b/components/camel-platform-http-main/src/main/docs/platform-http-main.adoc
@@ -25,21 +25,22 @@ Then, the platform http component should auto-detect this.
 
 == Uploading and downloading files
 
-The embedded HTTP server comes with a set of features out of the box, that can be enabled.
+The embedded HTTP server comes with a set of features out of the box (management, development and user services),
+that can be enabled.
 
 These features are as follows:
 
-- `/q/info` - Report basic information about Camel
-- `/dev/console` - Developer console that provides a lot of statistics and information
-- `/q/health (default)` - Health checks
-- `/q/jolokia` - To use Jolokia to expose JMX over HTTP REST
-- `/q/metrics (default)` - To provide otel metrics in prometheus format
+- `/` - Serving static content such as html, javascript, css, and images to make it easy to embed very small web applications.
+- `/observe/info` - Report basic information about Camel
+- `/observe/health` - Health checks
+- `/observe/jolokia` - To use Jolokia to expose JMX over HTTP REST
+- `/observe/metrics` - To provide OTEL metrics in prometheus format
+- `/q/dev` - Developer console that provides a lot of statistics and information
 - `/q/upload` - Uploading source files, to allow hot reloading.
 - `/q/download` - Downloading source files, to allow inspecting
 - `/q/send` - Sending messages to the Camel application via HTTP
-- `/` - Serving static content such as html, javascript, css, and images to make it easy to embed very small web applications.
 
-You configure these features in the `application.properties` file using the `camel.server.xxx` options.
+You configure these features in the `application.properties` file using the `camel.server.xxx` and `camel.management.xxx` options.
 
 == See More
 
