--- a/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_14.adoc
+++ b/docs/user-manual/modules/ROOT/pages/camel-4x-upgrade-guide-4_14.adoc
@@ -24,7 +24,18 @@ of an issue, and felt it's better to fix this before for this LTS release.
 The HTTP server for standalone `camel-main` applications has separated management services and business services.
 This means that configurations should be changed from `camel.server.xxx` to `camel.management.xxx` as shown:
 
-TODO: list of options
+
+|===
+|Old Option |New Option
+
+|Column 1, row 1
+|Column 2, row 1
+
+|Column 1, row 2
+|Column 2, row 2
+|===
+
+
 
 === camel-jbang
 
