CAMEL-22285: platform-http-main - Dev consoles should be registered as management endpoints

--- a/components/camel-micrometer/src/main/docs/micrometer-component.adoc
+++ b/components/camel-micrometer/src/main/docs/micrometer-component.adoc
@@ -585,9 +585,9 @@ And easily enable and configure this from `application.properties` as shown:
 
 [source,properties]
 ----
-# enable HTTP server with metrics
-camel.server.enabled=true
-camel.server.metricsEnabled=true
+# enable HTTP management server with metrics
+camel.management.enabled=true
+camel.management.metricsEnabled=true
 
 # turn on micrometer metrics
 camel.metrics.enabled=true
