CAMEL-22301: make the support level for AI components more consistent

--- a/components/camel-ai/camel-langchain4j-tokenizer/src/main/docs/langchain4j-tokenizer.adoc
+++ b/components/camel-ai/camel-langchain4j-tokenizer/src/main/docs/langchain4j-tokenizer.adoc
@@ -4,7 +4,7 @@
 :artifactid: camel-langchain4j-tokenizer
 :description: LangChain4j Tokenizer
 :since: 4.8
-:supportlevel: Experimental
+:supportlevel: Preview
 :tabs-sync-option:
 //Manually maintained attributes
 :group: AI
